--- a/pages/list/list.wxml
+++ b/pages/list/list.wxml
@@ -1,42 +1,41 @@
-<!--pages/list/list.wxml-->
-<!-- <text>pages/list/list.wxml</text> -->
+
+<!-- 顶部搜索栏 -->
 <view class='searchWrap'>
     <button class="butt" bindtap="gotoSearch" style="width:600rpx">
         <!-- <image></image> -->
         <text>搜索</text>
     </button> 
 </view>
+
+<!-- 展示日榜、月榜、专区按钮 -->
 <view class="bottom">
     <button size="mini" class="midButton" style="background-color: {{dailyColor}};"  bindtap="showDailylist">日榜</button>
     <button size="mini" class="leftButton" style="background-color: {{monthColor}};" bindtap="showMonthList">月榜</button>
     <button size="mini" class="rightButton" style="background-color: {{specialColor}};" bindtap="showSpecialArea">专区</button>
 </view>
-<view class='listTableWrap' wx:if="{{dailyFlag==1}}">
-    <view class="table" wx:for="{{dailyList}}" bindtap="gotodailyUrl" data-index='{{index}}'>
-        <view class="tr_title" >{{dailyList[index].title}}</view>
-        <view class="tr_synopsis">{{dailyList[index].synopsis}}</view>
-        <view class="tr_platform">{{dailyList[index].platform}}</view>
-        <view class="tr_click">点击量：{{dailyList[index].click}}</view>
+
+<!--  展示日榜或月榜文章 -->
+<view class='listTableWrap' wx:if="{{specialFlag==0}}">
+    <view class="table" wx:for="{{dataList}}" data-index="{{index}}" bindtap="gotoURL">
+        <view class="tr_title">{{dataList[index].title}}</view>
+        <view class="tr_synopsis">{{dataList[index].synopsis}}</view>
+        <view class="tr_platform">{{dataList[index].platform}}</view>
+        <view class="tr_click">点击量：{{dataList[index].click}}</view>
     </view> 
 </view>
-<view class='listTableWrap' wx:if="{{monthFlag==1}}">
-    <view class="table" wx:for="{{monthList}}" data-index="{{index}}" bindtap="gotomonthUrl">
-        <view class="tr_title">{{monthList[index].title}}</view>
-        <view class="tr_synopsis">{{monthList[index].synopsis}}</view>
-        <view class="tr_platform">{{monthList[index].platform}}</view>
-        <view class="tr_click">点击量：{{monthList[index].click}}</view>
-    </view> 
-</view>
+
+<!-- 展示专区的按钮 -->
 <view class="bottom1"  wx:if="{{specialFlag==1}}">
         <button size="mini" bindtap="classification1">c++</button>
         <button size="mini" bindtap="classification2">java</button>
         <button size="mini" bindtap="classification3">python</button>
 </view>
+<!-- 展示专区的文章 -->
 <view class='listTableWrap' style="top: 280rpx;" wx:if="{{specialFlag==1}}">
-    <view class="table" wx:for="{{specialList}}"  data-index="{{index}}" bindtap="gotoSpecialUrl">
-        <view class="tr_title">{{specialList[index].title}}</view>
-        <view class="tr_synopsis">{{specialList[index].synopsis}}</view>
-        <view class="tr_platform">{{specialList[index].platform}}</view>
-        <view class="tr_click">点击量：{{specialList[index].click}}</view>
+    <view class="table" wx:for="{{dataList}}"   data-index="{{index}}" bindtap="gotoURL">
+        <view class="tr_title">{{dataList[index].title}}</view>
+        <view class="tr_synopsis">{{dataList[index].synopsis}}</view>
+        <view class="tr_platform">{{dataList[index].platform}}</view>
+        <view class="tr_click">点击量：{{dataList[index].click}}</view>
     </view> 
 </view>
