移除月榜功能

--- a/pages/list/list.wxml
+++ b/pages/list/list.wxml
@@ -6,12 +6,10 @@
     </button>
 </view>
 
-<!-- 展示日榜、月榜、专区按钮 -->
+<!-- 展示日榜、专区按钮 -->
 <view class="bottom">
-    <button size="mini" class="midButton" style="background-color: {{dailyColor}};" bindtap="showDailylist">日榜</button>
-    <button size="mini" class="leftButton" style="background-color: {{monthColor}};" bindtap="showMonthList">月榜</button>
-    <button size="mini" class="rightButton" style="background-color: {{specialColor}};"
-        bindtap="showSpecialArea">专区</button>
+    <button size="mini" class="leftButton" style="background-color: {{dailyColor}};" bindtap="showDailylist">日榜</button>
+    <button size="mini" class="rightButton" style="background-color: {{specialColor}};"bindtap="showSpecialArea">专区</button>
 </view>
 
 <!-- 展示专区的按钮 -->
@@ -31,7 +29,9 @@
                 <image mode="widthFix" src="/images/heart (1).png" wx:if="{{dataList[index].like==1}}"></image>
             </buttom>
         </view>
-        <view class="tr_synopsis">{{dataList[index].synopsis}}</view>
+        <view class="tr_synopsis">
+            {{dataList[index].synopsis}}
+        </view>
         <view class="tr_platform">{{dataList[index].platform}}</view>
         <view class="tr_click">点击量：{{dataList[index].click}}</view>
     </view>
@@ -47,18 +47,17 @@
     </view>
 </view> -->
 
-<!--  正式版：展示日榜或月榜文章 -->
-<view class='listTableWrap' wx:if="{{specialFlag==0}}">
+<!--  正式版：展示日榜文章 -->
+<view class='listTableWrap' wx:if="{{dailyFlag==1}}">
     <view class="table" wx:for="{{list}}" data-index="{{index}}" bindtap="gotoURL">
         <view class="tr_titleBox">
             <view class="tr_title">{{list[index].blogTitle}}</view>
             <buttom class="tr_like" catchtap="sendLike" data-index="{{index}}">
-                <image mode="widthFix" src="/images/heart.png" wx:if="{{list[index].like==0}}"></image>
-                <image mode="widthFix" src="/images/heart (1).png" wx:if="{{list[index].like==1}}"></image>
+                <image mode="widthFix" src="/images/heart.png" ></image>
             </buttom>
         </view>
         <view class="tr_synopsis">{{list[index].blogBrief}}</view>
-        <view class="tr_platform">osChina</view>
+        <view class="tr_platform" >csdn</view>
         <view class="tr_click">点击量：{{list[index].id}}</view>
     </view>
 </view>
@@ -66,9 +65,16 @@
 <!-- 正式版：展示专区的文章 -->
 <view class='listTableWrap' style="top: 280rpx;" wx:if="{{specialFlag==1}}">
     <view class="table" wx:for="{{list}}" data-index="{{index}}" bindtap="gotoURL">
-        <view class="tr_title">{{list[index].blogTitle}}</view>
+        <view class="tr_titleBox">
+            <view class="tr_title">{{list[index].blogTitle}}</view>
+            <buttom class="tr_like" catchtap="sendLike" data-index="{{index}}">
+                <image mode="widthFix" src="/images/heart.png" ></image>
+            </buttom>
+        </view>
         <view class="tr_synopsis">{{list[index].blogBrief}}</view>
-        <view class="tr_platform">osChina</view>
+        <view class="tr_platform" wx:if="{{classify==1}}">osChina</view>
+        <view class="tr_platform" wx:if="{{classify==2}}">CSDN</view>
+        <view class="tr_platform" wx:if="{{classify==3}}">gitHub</view>
         <view class="tr_click">点击量：{{list[index].id}}</view>
     </view>
 </view>
