--- a/pages/search/search.wxml
+++ b/pages/search/search.wxml
@@ -1,2 +1,83 @@
-<!--pages/search/search.wxml-->
-<text>pages/search/search.wxml</text>
+<view class="main">
+<!-- 返回键 -->
+    <navigator url="../index/index">
+    <view class="back_Icon" bindtap="">
+    <image src="../../image/back.png" style="width: 100%; height: 100%;"></image>
+    </view>
+    </navigator>  
+<!-- 搜索容器 -->
+    <view class="search-box">
+    <!-- 白布框 -->
+        <input class="search-input" placeholder="请输入搜索" value="{{value}}" bindinput="searchInput"  bindconfirm="searchconfirm"/>
+        <icon class="weui-icon-search_in-box search-icon" type="search" wx:if="{{isSearch}}" size="30"></icon>
+        <!-- 点击相关词，后结果，出现取消键-->
+        <text class="search-btn" wx:if="{{showResult}}" bindtap="cancelSearch">取消</text>
+    </view>
+</view>
+    <!-- 若showResult为false时候显示热点搜索和历史搜索，反之显示结果-->
+    <view class="result" wx:if="{{showResult}}" >
+    <view wx:if="{{match}}" >
+        <view class="item_show" wx:for="{{result}}" wx:key="index">
+            <view bindtap="gotoURL" data-index="{{index}}">
+            <view class=".item_title">{{item.name}}</view>
+            <view class="content">  {{item.description}}</view>
+            <view class="from">来源：{{item.owner.login}}</view>
+            <view class="point_Num">点击量：{{item.watchers_count}}</view>
+            </view>
+            <view class="like">
+            <image class="like_Image" src="../../image/like.png" bindtap="tapLike" wx:if="{{item.like}}" data-index="{{index}}"></image>
+            <image class="like_Image" src="../../image/like_1.png" bindtap="cancelLike" wx:if="{{item.islike}}" data-index="{{index}}"></image>
+            </view>
+        </view>
+    </view>   
+        <!-- 查不到时 -->
+        <view class="result-null" wx:if="{{!num}}">
+            <view class="null-tips">Oh~~ 搜索结果为空！</view>
+            <view class="recommend-title">
+                <text>相关推荐(尚未实现)</text>
+            </view>
+            <view class="item_show" wx:for="{{result}}" wx:key="index">
+            <view bindtap="gotoURL" data-index="{{index}}">
+            <view class=".item_title">{{item.name}}</view>
+            <view class="content">  {{item.description}}</view>
+            <view class="from">来源：{{item.owner.login}}</view>
+            <view class="point_Num">点击量：{{item.stargazers_count}}</view>
+            </view>
+            <view class="like">
+            <image class="like_Image" src="../../image/like.png" bindtap="tapLike" wx:if="{{item.like}}" data-index="{{index}}"></image>
+            <image class="like_Image" src="../../image/like_1.png" bindtap="cancelLike" wx:if="{{item.islike}}" data-index="{{index}}"></image>
+            </view>
+        </view>
+        </view>
+    </view>
+    <!-- 热门搜索和历史搜索 -->
+    <view class="init-page" wx:else>
+        <!-- 热点搜索 -->
+        <view class="title">
+            <text>热点搜索</text>
+        </view>
+        <view class="tags">
+            <text wx:for="{{hot}}" wx:key="index" data-text="{{item}}" bindtap="keywordHandle">{{item}}</text>
+        </view>
+        <!-- 历史搜索 -->
+        <view wx:if="{{history.length >=0}}">
+            <view class="title">
+                <text>历史搜索</text>
+                <!-- 清除键 -->
+                <text class="clear"  bindtap="clearHistory">清除</text>
+            </view>
+            <view class="tags">
+                <text wx:for="{{history}}" wx:key="index" data-text="{{item}}" bindtap="keywordHandle">{{item}}</text>
+            </view>
+        </view>
+    </view>
+<!-- 显示关键词语 -->
+    <!-- <view class="keywords" wx:if="{{false}}">
+        <view class="keywords-item" wx:for="{{keywords}}" wx:key="index" data-text="{{item}}" bindtap="keywordHandle">{{item}}</view>
+    </view> -->
+    <!-- 下拉加载 -->
+    <view class="weui-loadmore" hidden="{{isHideLoadMore}}" wx:if="{{showResult}}">
+    <view class="weui-loading"></view>
+    <view class="weui-loadmore__tips">正在加载</view>
+  </view>
+
