--- a/components/searchinput/searchinput.wxss
+++ b/components/searchinput/searchinput.wxss
@@ -1,10 +1,13 @@
-.search_input{
+.search_input {
     height: 60rpx;
     padding: 10rpx;
-    background-color: #0094aa;
+    background-color: dodgerblue;
     font-size: 35rpx;
 }
-.search{
+
+.search {
+    margin-left: 10%;
+    width: 80%;
     height: 100%;
     border-radius: 55rpx;
     display: flex;
