--- a/pages/collect/collect.wxml
+++ b/pages/collect/collect.wxml
@@ -2,28 +2,37 @@
 
 <!--选择框-->
 <view class="product-list">
- <!--条件选择-->
- <view class="choice-bar">
-  <view bindtap="opens" data-item="1" class="chioce-item" hover-class="click-once-opaque">{{start}}
-   <image class="icon-chioce" src="{{!isstart?openimg: offimg}}"></image>
-  </view>
-  <view bindtap="opens" data-item="0" class="chioce-item" hover-class="click-once-opaque">{{start1}}
-   <image class="icon-chioce" src="{{!isstart?openimg: offimg}}"></image>
-  </view>
-  <view class="sorting-list{{!isstart?' chioce-list-hide':' chioce-list-show'}}" style="margin-left:{{ml}};">
-   <view  wx:for="{{slist}}" catchtap="onclicks1" data-index="{{index}}" class="sorting-item" hover-class="click-once" wx:key="userInfoListId" >{{item.name}}</view>
-  </view>
- </view>
- 
+    <!--条件选择-->
+    <view class="choice-bar">
+        <view bindtap="opens" data-item="1" class="chioce-item" hover-class="click-once-opaque">{{start}}
+            <image class="icon-chioce" src="{{!isstart?openimg: offimg}}"></image>
+        </view>
+        <view bindtap="opens" data-item="0" class="chioce-item" hover-class="click-once-opaque">{{start1}}
+            <image class="icon-chioce" src="{{!isstart?openimg: offimg}}"></image>
+        </view>
+        <view class="sorting-list{{!isstart?' chioce-list-hide':' chioce-list-show'}}" style="margin-left:{{ml}};">
+            <view wx:for="{{slist}}" catchtap="onclicks1" data-index="{{index}}" class="sorting-item"
+                hover-class="click-once" wx:key="userInfoListId">{{item.name}}</view>
+        </view>
+    </view>
 </view>
 <view class="scr" wx:for="{{ll}}">
- 
-   <image src="/img/sc.png" style="width:40rpx;height:40rpx;margin-left:530rpx;margin-top:10rpx;"></image>
- </view>
 
+    <image src="/img/sc.png" style="width:40rpx;height:40rpx;margin-left:530rpx;margin-top:10rpx;"></image>
+</view>
 
+<!--  正式版：展示文章 -->
+<view class='listTableWrap'>
+    <view class="table" wx:for="{{list}}" data-index="{{index}}" bindtap="gotoURL" wx:if="{{index>0}}">
+        <view class="tr_titleBox">
+            <view class="tr_title">{{list[index].user_likes_title}}</view>
+            <buttom class="tr_like" catchtap="sendNotLike" data-index="{{index}}">
+                <image mode="widthFix" src="/images/heart.png"></image>
+            </buttom>
+        </view>
+        <view class="tr_synopsis"></view>
+        <view class="tr_platform">csdn</view>
+        <view class="tr_click">点击量：{{index}}</view>
 
-
-
-
-
+    </view>
+</view>
