--- a/pages/mine/mine.wxss
+++ b/pages/mine/mine.wxss
@@ -1,11 +1,12 @@
-/* pages/navigation/navigation.wxss *//* pages/index/index.wxss */
+/* pages/navigation/navigation.wxss */
+/* pages/index/index.wxss */
 /* 头像 */
-.map{
+.map {
   width: 100%;
   height: 550rpx;
 }
 
-.vi1{
+.vi1 {
   position: absolute;
   z-index: 1;
   width: 600rpx;
@@ -13,7 +14,8 @@
   top: 7%;
   left: 10%;
 }
-.vi2{
+
+.vi2 {
   position: absolute;
   z-index: 1;
   width: 180rpx;
@@ -21,25 +23,27 @@
   top: 2%;
   left: 85%;
 }
+
 /* 头像 */
-.compss{
+.compss {
   width: 180rpx;
   height: 100%;
   border-radius: 100rpx;
-  margin-top:-40rpx ;
-  
+  margin-top: -40rpx;
+
 }
 
 /* 图标设置 */
-.vi4{
+.vi4 {
   /* position: absolute; */
-  
-  margin-top: 700rpx; 
+
+  margin-top: 700rpx;
   width: 100%;
   margin-left: 75%;
 }
+
 /* 收藏夹*/
-.vi8{
+.vi8 {
   /* position: absolute; */
   position: absolute;
   z-index: 2;
@@ -49,8 +53,9 @@
   margin-top: 220rpx;
   margin-left: 3%;
 }
+
 /* 订阅&关注*/
-.vi88{
+.vi88 {
   /* position: absolute; */
   position: absolute;
   z-index: 2;
@@ -60,78 +65,91 @@
   margin-top: 220rpx;
   margin-left: 60%;
 }
+
 /* 收藏，关注&订阅 */
-.ceshi{
+.ceshi {
   width: 200rpx;
   height: 200rpx;
   display: flexbox;
-  margin-top:10%;
+  margin-top: 10%;
   margin-right: 120px;
   margin-left: 20px;
 }
+
 /* 收藏小字 */
-.vi11{
+.vi11 {
   /* position: absolute; */
   position: absolute;
   z-index: 1;
- margin-top: -70rpx; 
+  margin-top: -70rpx;
   width: 100%;
   margin-left: 110rpx;
   color: white;
-  font-size:40rpx ;
-  font-style:normal;
+  font-size: 40rpx;
+  font-style: normal;
 }
+
 /* 左边的小字0 */
-.vi12{
+.vi12 {
   /* position: absolute; */
   position: absolute;
   z-index: 1;
- margin-top: -120rpx; 
+  margin-top: -120rpx;
   width: 100rpx;
   margin-left: 100rpx;
   color: white;
-  font-size:40rpx;
-  font-style:normal;
-  display: flex; /*设置显示样式**/
+  font-size: 40rpx;
+  font-style: normal;
+  display: flex;
+  /*设置显示样式**/
 
-align-items: center; /**子view垂直居中*/
+  align-items: center;
+  /**子view垂直居中*/
 
-vertical-align: center; /**垂直居中*/
+  vertical-align: center;
+  /**垂直居中*/
 
-justify-content: center; /**内容居中*/
+  justify-content: center;
+  /**内容居中*/
 
-flex-direction: row;
+  flex-direction: row;
 }
+
 /* 订阅小字 */
-.vi13{
+.vi13 {
   /* position: absolute; */
   position: absolute;
   z-index: 1;
- margin-top: -70rpx; 
+  margin-top: -70rpx;
   width: 100%;
   margin-left: 73%;
   color: white;
-  font-size:40rpx ;
-  font-style:normal;
+  font-size: 40rpx;
+  font-style: normal;
 }
+
 /* 右边的小字0 */
-.vi14{
+.vi14 {
   /* position: absolute; */
   position: absolute;
   z-index: 1;
- margin-top: -120rpx; 
+  margin-top: -120rpx;
   width: 100rpx;
   margin-left: 540rpx;
   color: white;
-  font-size:40rpx;
-  font-style:normal;
-  display: flex; /*设置显示样式**/
+  font-size: 40rpx;
+  font-style: normal;
+  display: flex;
+  /*设置显示样式**/
 
-  align-items: center; /**子view垂直居中*/
-  
-  vertical-align: center; /**垂直居中*/
-  
-  justify-content: center; /**内容居中*/
-  
+  align-items: center;
+  /**子view垂直居中*/
+
+  vertical-align: center;
+  /**垂直居中*/
+
+  justify-content: center;
+  /**内容居中*/
+
   flex-direction: row;
 }
