--- a/pages/setup/setup.wxss
+++ b/pages/setup/setup.wxss
@@ -1,42 +1,49 @@
 /* pages/page1/page1.wxss */
 /* 上册外边框*/
-.box1{
+.box1 {
   border: 1px solid silver;
   padding: 36rpx;
   padding: 20rpx;
   background-color: rgb(92, 92, 245);
 }
+
 /* 下侧外边框 */
-.box2{
+.box2 {
   border: 1px solid silver;
   margin: 20rpx;
   padding: 90rpx;
-  margin-top:5% ;
+  margin-top: 5%;
   border-radius: 3%;
 }
+
 /* 设置小字 */
-.zi{
+.zi {
   margin-left: 43%;
   color: white;
 }
+
 /* 订阅推送小字*/
-.dt{
+.dt {
   margin-bottom: 12%;
-  margin-left:-13% ;
+  margin-left: -13%;
 }
+
 /* 关注推送小字*/
-.gt{
-  margin-left:-13% ;
+.gt {
+  margin-left: -13%;
 }
+
 /* 退出登录 */
-.tc{
-  color:rgb(90, 123,224);
+.tc {
+  color: rgb(90, 123, 224);
 }
+
 /* 开关1 */
-.sw1{
-  margin-left:50%;
+.sw1 {
+  margin-left: 50%;
 }
+
 /* 开关2*/
-.sw2{
-  margin-left:50% ;
+.sw2 {
+  margin-left: 50%;
 }
